# bfxconsole

./: Makefile  Makefile.in  README.md  aclocal.m4  apikeys  bfxconsole  bfxconsole.anjuta  config.h  config.status  configure  configure.ac  jsontest
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  bfxconsole  bfxconsole.c  bfxconsole.py  bfxconsole.py~  bfxconsole.vala  gcrypt.patch  gcrypt.vapi  gcrypt.vapi.rej  jsontest.vala  test.py
